@@ -1,4 +1,9 @@
 User johns
+Date Mon Aug  2 13:12:56 CEST 2010
+
+    Added support for hyper-threading CPUs.
+    Added small gap between log area and current cpu usage bar.
+
 Date Thu May 27 16:09:44 CEST 2010
 
     Added support to run on any X11 screen.
